# pomodoro

Pomodoro/: .gitignore  .prod.env  Dockerfile  Makefile  alembic.ini  database.py  dependency.py  docker-compose.yml  fixtures.py  main.py  pomodoro.db  pomodoro.sqlite  pyproject.toml  settings.py
Pomodoro/Repository/: Task.py  __init__.py  cache_task.py
Pomodoro/alembic/versions/: 52c3b3a6181a_1.py  6596586d1f29_2.py
Pomodoro/cache/: accessor.py
Pomodoro/database/: database.py  models.py
Pomodoro/handlers/: __init__.py  ping.py  task.py
Pomodoro/schema/: __init__.py  task.py  taskSchema.py
Pomodoro/service/: task_service.py
